--- a/majoPostres/src/app/app.component.html
+++ b/majoPostres/src/app/app.component.html
@@ -1,4 +1,5 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<mat-toolbar class="header"> <span>Maria Jota Desserts</span> </mat-toolbar>
+
+<app-header></app-header>
 <app-home></app-home>
 <app-footer></app-footer>
