--- a/majoPostres/src/app/footer/footer.component.html
+++ b/majoPostres/src/app/footer/footer.component.html
@@ -6,7 +6,7 @@
 
   <div fxFlex="100" fxFlex.gt-sm="50" class="cuerpo">
     <div fxLayout="row">
-      <div fxFlex="40" fxFlexOffset="20px">
+      <div fxFlex="45" fxFlexOffset="20px" class="letraFooter">
         <h4 >Nuestros Productos</h4>
         <mat-list>
           <mat-list-item><a mat-button>Tortas y Cupcakes</a></mat-list-item>
@@ -15,7 +15,7 @@
           
         </mat-list>
       </div>
-      <div fxFlex="55">
+      <div fxFlex="45" class="letraFooter">
         <h4>HORARIOS DE ATENCIÓN</h4>
         <div>
           <span>Lunes a Viernes: 8am - 5:30pm</span><br>
@@ -27,6 +27,8 @@
         </div>
         
       </div>
+     
+      
     </div>
   </div>
   <div fxFlex="100" fxFlex.gt-sm="45">
@@ -40,6 +42,6 @@
     </div>
   </div>
   <div>
-      <p>© Copyright 2021 Maria Jota Desserts</p>
+      <p class="cuerpo">© Copyright 2021 Maria Jota Desserts</p>
   </div>
 </div>
