--- a/majoPostres/src/app/home/home.component.html
+++ b/majoPostres/src/app/home/home.component.html
@@ -1,15 +1,49 @@
-<div fxLayout="row" >
-  <img src="src\assets\images\logomj2.jpg" class="imagenHeader">
-  <div fxFlex="80">
-    <h1 class="titulo letraHeader tituloHeader" >
-      Maria Jota
-  
-    </h1>
-    <h2 class="cuerpo letraHeader pegado ">
-      Desserts
-  
-    </h2>
+<div fxFlex >
+  <div>
+    <div class="imagenFondo ">
+      <p class="letraHome">Hacemos postres personalizados. A continuación se encuentra un catálogo de algunos postres que hemos hecho, los cuales sirven como referencia para hacer un pedido y escoger el tipo de postre, el sabor, la cantidad y hasta el color.  </p>
+    
+    
+    </div>
+    <div style="display:flex;justify-content:center;align-items:center;">
+      <button class="botonPedido">Hacer pedido</button>
+    </div>
+
   </div>
-  
-  
+  <div class="cuerpo">
+    <div class="linea"  fxLayout="row" fxLayoutAlign="space-evenly center">
+      <div >
+        <h1 class="titulo letraKobi titulodiv">Tortas y Cupcakes</h1>
+        <h2 class="textodiv">blabla</h2>
+        <a class="letraStar linkdiv">Ver más></a>
+      </div>
+      <div>
+        <img src="src\assets\images\tortazul.jpeg" class="imagendiv">
+      </div>
+    </div>
+    <div class="linea"  fxLayout="row" fxLayoutAlign="space-evenly center">
+      <div>
+        <img src="src\assets\images\merengues.jpeg" class="imagendiv">
+      </div>
+      <div >
+        <h1 class="titulo letraKobi titulodiv">Galletas</h1>
+        <h2 class="textodiv">blabla</h2>
+        <a class="letraStar linkdiv">Ver más></a>
+      </div>
+      
+    </div>
+    <div fxLayout="row" fxLayoutAlign="space-evenly center">
+      <div >
+        <h1 class="titulo letraKobi titulodiv">Otros</h1>
+        <h2 class="textodiv">Donas, pies, brownies y mucho más! </h2>
+        <a class="letraStar linkdiv">Ver más></a>
+      </div>
+      <div>
+        <img src="src\assets\images\donas.jpeg" class="imagendiv">
+      </div>
+    </div>
+    
+  </div>
+
 </div>
+
