--- a/majoPostres/src/styles.scss
+++ b/majoPostres/src/styles.scss
@@ -14,6 +14,11 @@ $star-command-blue: rgba(34, 116, 165, 1);
 }
 .footer{
     background-color: $kobi;
+    
+}
+.letraFooter{
+    font-size: 40px;
+
 }
 .btn-facebook {color:#fff!important; background-color:#3b5998!important;}
 .btn-google-plus{color:#fff!important;background-color:#dd4b39!important;}
@@ -74,4 +79,51 @@ $star-command-blue: rgba(34, 116, 165, 1);
 .fondoStar{
     background-color: $star-command-blue;
 
+
+}
+.letraStar{
+    color:$star-command-blue;
+}
+.imagenFondo{
+    background-image: url("src/assets/images/banner.jpeg");
+    opacity: 0.8;
+    margin-top: 200px;
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+}
+.letraHome{
+    font-size: 60px;
+    text-align: center;
+    font-family: 'Barlow Condensed';
+    padding: 20px;
+    
+}
+.botonPedido{
+    color:$prussian-blue;
+    background-color: $powder-blue;
+    font-size: 40px;
+    margin-bottom: 100px;
+    border: none;
+    padding: 15px 32px;
+    text-align: center;
+    border-radius: 12px;
+}
+.linea{
+    border-bottom: 3px solid $kobi; 
+    margin-bottom:10px;
+}
+.titulodiv{
+    font-size: 60px;
+
+}
+.textodiv{
+    font-size: 50px;
+
+}
+.linkdiv{
+    font-size: 40px;
+
+}
+.imagendiv{
+    margin:60px
 }
