hacer pedido component

--- a/majoPostres/src/app/header/header.component.html
+++ b/majoPostres/src/app/header/header.component.html
@@ -1,8 +1,8 @@
 <mat-toolbar class="header">
   <p>Maria Jota Desserts</p>
-  <a mat-button><span class="fa fa-home fa-lg"></span> Inicio</a>
-  <a mat-button><span class="fa fa-list fa-lg"></span>Catalogo</a>
-  <a mat-button><span class="fa fa-shopping-bag fa-lg"></span>Hacer pedido</a>
+  <a mat-button routerLink='/home'><span class="fa fa-home fa-lg"></span> Inicio</a>
+  <a mat-button routerLink='/verMas'><span class="fa fa-list fa-lg"></span>Catalogo</a>
+  <a mat-button routerLink='/hacerPedido'><span class="fa fa-shopping-bag fa-lg"></span>Hacer pedido</a>
   
 </mat-toolbar>
 
