--- a/majoPostres/src/app/home/home.component.html
+++ b/majoPostres/src/app/home/home.component.html
@@ -14,7 +14,7 @@
     <div class="linea"  fxLayout="row" fxLayoutAlign="space-evenly center">
       <div >
         <h1 class="titulo letraKobi titulodiv">Tortas y Cupcakes</h1>
-        <h2 class="textodiv">blabla</h2>
+        <h2 class="textodiv">Esponjosos y decorados con crema de cualquier color</h2>
         <a class="letraStar linkdiv">Ver más></a>
       </div>
       <div>
@@ -27,7 +27,7 @@
       </div>
       <div >
         <h1 class="titulo letraKobi titulodiv">Galletas</h1>
-        <h2 class="textodiv">blabla</h2>
+        <h2 class="textodiv">Desde macaroons hasta chips de chocolate</h2>
         <a class="letraStar linkdiv">Ver más></a>
       </div>
       
