--- a/majoPostres/src/styles.scss
+++ b/majoPostres/src/styles.scss
@@ -125,5 +125,7 @@ $star-command-blue: rgba(34, 116, 165, 1);
 
 }
 .imagendiv{
-    margin:60px
+    margin:60px;
+    height: 400px;
+    width: 400px;
 }
