--- a/majoPostres/src/app/header/header.component.html
+++ b/majoPostres/src/app/header/header.component.html
@@ -6,9 +6,12 @@
   
 </mat-toolbar>
 
-<div fxLayout="row" >
-  <img src="src\assets\images\logomj2.jpg" class="imagenHeader">
-  <div fxFlex="80">
+<div fxLayout="row" fxLayoutAlign="center center"class="divHeader" >
+  <div fxLayout="column" fxLayoutAlign="center center" class="divImagenHeader">
+    <img src="src\assets\images\logomj2.jpg" class="imagenHeader">
+  </div>
+  
+  <div >
     <h1 class="titulo letraHeader tituloHeader" >
       Maria Jota
   
