--- a/majoPostres/src/app/hacer-pedido/hacer-pedido.component.html
+++ b/majoPostres/src/app/hacer-pedido/hacer-pedido.component.html
@@ -1,32 +1,42 @@
 <div  class="textodiv cuerpo" >
+  <form [formGroup]="checkoutForm" (ngSubmit)="onSubmit()">
   <div>
     <h3>Realiza tu pedido</h3>
-    <mat-grid-list cols="2" rowHeight="100px" >
-      
+    
+
+    
+   
+    <mat-grid-list cols="6" rowHeight="100px" >
+      <mat-grid-tile  colspan="1">
+    
+      </mat-grid-tile>
       <mat-grid-tile  colspan="1" class="fondoLabels">
     
-        <label class="letraMasPeq">
+        <label for="email" class="letraMasPeq">
           Email
         </label>
       </mat-grid-tile>
       
      
-        <mat-grid-tile colspan="1">
+        <mat-grid-tile colspan="4">
           <div class="fondoDatos">
-            <input type="text" placeholder="Email">
+            <input id="email" type="text" placeholder="Email" formControlName="email">
           </div>
           
         </mat-grid-tile>
       
-       
+        <mat-grid-tile  colspan="1">
+    
+        </mat-grid-tile>
       <mat-grid-tile colspan="1" class="fondoLabels">
-      <label class="letraMasPeq">
+      <label class="letraMasPeq" for="tipoPostre">
         Tipo de Postre
       </label>
-        
+      
+      <input  id="tipoPostre" type="text" formControlName="tipoPostre">
       </mat-grid-tile>
       <div  fxLayout="row" >
-        <mat-grid-tile colspan="1" class="letraMasPeq">
+        <mat-grid-tile colspan="4" class="letraMasPeq">
         
           <div>
             <label class="fondoDatos">
@@ -47,7 +57,7 @@
             </label>
           </div>
           <div>
-            <select class="form-select" name="NAME" ngModel>
+            <select class="form-select" name="NAME" >
              
              <option value="" disabled selected>Selecciona una opción</option>
              <option value="1">Donas</option>
@@ -55,38 +65,48 @@
              <option value="3">Brownie</option>
            </select>
           </div>
-    
+   
         </mat-grid-tile>
       </div>
-      
+      <mat-grid-tile  colspan="1">
+    
+      </mat-grid-tile>
       <mat-grid-tile colspan="1" class="fondoLabels">
-        <label class="letraMasPeq">
+        <label for="porciones" class="letraMasPeq">
           Porciones
         </label>
       </mat-grid-tile>
-      <mat-grid-tile colspan="1">
+      <mat-grid-tile colspan="4">
         <div class="fondoDatos">
-          <input   placeholder="Numero porciones" type="number">
+          <input   placeholder="Numero porciones" type="number" id="porciones"  formControlName="porciones">
         </div>
         
   
       </mat-grid-tile>
-      
-      <mat-grid-tile colspan="1" class="fondoLabels">
-        <label class="letraMasPeq">
+      <mat-grid-tile  colspan="1">
+    
+      </mat-grid-tile>
+      <mat-grid-tile colspan="2" class="fondoLabels">
+        <label class="letraMasPeq" for="comentarios">
           Comentarios Adicionales
         </label>
       </mat-grid-tile>
-      <mat-grid-tile colspan="1" class="fondoLabels" >
-        <label class="letraMasPeq">
+      <mat-grid-tile colspan="2" class="fondoLabels" >
+        <label class="letraMasPeq" for="imagen">
           Imagen de referencia
         </label>
       </mat-grid-tile>
-      <mat-grid-tile rowspan="2" colspan="1">
-        <textarea    placeholder="Escribe aqui" rows=12> </textarea>
+      <mat-grid-tile  colspan="1">
+    
       </mat-grid-tile>
-      <mat-grid-tile rowspan="2" colspan="1">
-        <button>Adjuntar imagen</button>
+      <mat-grid-tile  colspan="1">
+    
+      </mat-grid-tile>
+      <mat-grid-tile rowspan="2" colspan="2">
+        <textarea    placeholder="Escribe aqui" rows=12 id="comentarios"  formControlName="comentarios"> </textarea>
+      </mat-grid-tile>
+      <mat-grid-tile rowspan="2" colspan="2">
+        <input id="imagen" type="text" formControlName="imagen">
       </mat-grid-tile>
      
   
@@ -95,47 +115,12 @@
   
   </div>
   <div>
-    <button>Enviar</button>
+    <button  class="button" type="submit">Enviar</button>
   </div>
-  
+</form>
 
 </div>
-<form [formGroup]="checkoutForm" (ngSubmit)="onSubmit()">
-  <div>
-    <label for="email">
-      Email
-    </label>
-    <input id="email" type="text" formControlName="email">
-  </div>
 
-  <div>
-    <label for="tipoPostre">
-      Tipo de Postre
-    </label>
-    <input id="tipoPostre" type="text" formControlName="tipoPostre">
-  </div>
-  <div>
-    <label for="porciones">
-      Porciones
-    </label>
-    <input id="porciones" type="text" formControlName="porciones">
-  </div>
-  <div>
-    <label for="comentarios">
-      Comentarios
-    </label>
-    <input id="comentarios" type="text" formControlName="comentarios">
-  </div>
-  <div>
-    <label for="imagen">
-      Imagen de referencia
-    </label>
-    <input id="imagen" type="text" formControlName="imagen">
-  </div>
-
-  <button class="button" type="submit">Enviar</button>
-
-</form>
 
 <div>
   <mat-grid-list cols="4" rowHeight="100px">
