--- a/majoPostres/src/app/home/home.component.html
+++ b/majoPostres/src/app/home/home.component.html
@@ -6,7 +6,7 @@
     
     </div>
     <div style="display:flex;justify-content:center;align-items:center;">
-      <button class="botonPedido">Hacer pedido</button>
+      <button class="botonPedido" routerLink='/hacerPedido'>Hacer pedido</button>
     </div>
 
   </div>
@@ -15,7 +15,7 @@
       <div >
         <h1 class="titulo letraKobi titulodiv">Tortas y Cupcakes</h1>
         <h2 class="textodiv">Esponjosos y decorados con crema de cualquier color</h2>
-        <a class="letraStar linkdiv">Ver más></a>
+        <a class="letraStar linkdiv" routerLink='/verMas'>Ver más></a>
       </div>
       <div>
         <img src="src\assets\images\tortazul.jpeg" class="imagendiv">
