--- a/majoPostres/src/app/hacer-pedido/hacer-pedido.component.html
+++ b/majoPostres/src/app/hacer-pedido/hacer-pedido.component.html
@@ -95,23 +95,13 @@
    
   
   </div>
-  <div>
-    <button  class="button" type="submit">Enviar</button>
+  <div class="centrar">
+    <button  class="botonEnviar" type="submit">Enviar</button>
   </div>
 </form>
 
 </div>
 
 
-<div>
-  <mat-grid-list cols="4" rowHeight="100px">
-    <mat-grid-tile
-        *ngFor="let tile of tiles"
-        [colspan]="tile.cols"
-        [rowspan]="tile.rows"
-        [style.background]="tile.color">
-      {{tile.text}}
-    </mat-grid-tile>
-  </mat-grid-list>
-</div>
+
 
